--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
 
-    <main>
+    <main class="accueil">
       <p>
         Bienvenue sur le site du Memory de l'ENI.<br />Venez jouer avec nous et
         faites le meilleure score possible
@@ -41,21 +41,6 @@
         </li>
       </ul>
 
-      <!-- <div class="game">
-        <img src="medias/image1.jpg" alt="image ane" />
-        <img src="medias/image2.jpg" alt="image ane" />
-        <img src="medias/image3.jpg" alt="image elephant" />
-        <img src="medias/image4.jpg" alt="image elephant" />
-        <img src="medias/image5.jpg" alt="image coq" />
-        <img src="medias/image6.jpg" alt="image coq" />
-        <img src="medias/image7.jpg" alt="image chien" />
-        <img src="medias/image8.jpg" alt="image chien" />
-        <img src="medias/image9.jpg" alt="image chat" />
-        <img src="medias/image10.jpg" alt="image chat" />
-        <img src="medias/image11.jpg" alt="image cochon" />
-        <img src="medias/image12.jpg" alt="image cochon" />
-      </div> -->
-
       <div class="game">
         <img src="medias/image1.jpg" alt="image ane" />
         <img src="medias/image1.jpg" alt="image ane" />
@@ -71,13 +56,12 @@
         <img src="medias/image6.jpg" alt="image cochon" />
       </div>
 
-      
-
       <p>
         Si vous voulez vous souvenir de votre score, inscrivez-vous via le
         formulaire.<br />
         Le jeu garde les <strong>5 meilleurs scores</strong><br />
-        Si vous voulez relancer une partie cliquez sur <strong>la barre espace</strong>
+        Si vous voulez relancer une partie cliquez sur
+        <strong>la barre espace</strong>
       </p>
     </main>
 
