dernière mise à jour avec formulaire inscription qui tourne et ajoute dans localStroage => manque vérification si déjà existant

--- a/play.html
+++ b/play.html
@@ -23,7 +23,7 @@
       <form action="" method="get">
         <h3>Choix du Memory</h3>
         <select name="theme" id="theme">
-          <option value="Animaux">Animaux</option>
+          <option value="Animaux" selected>Animaux</option>
           <option value="Légumes">Légumes</option>
           <option value="Animaux domestiques">Animaux domestiques</option>
           <option value="Animaux animés">Animaux animés</option>
