dernière version avant présentation, toutes les pages sont foncitonnelles. Manque le storage des sc ores, leur incrémentation dans le profil et la possibilité de jouer avec un autre set

--- a/register.html
+++ b/register.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h1>ENI - MEMORY - Accueil</h1>
+      <h1>ENI - MEMORY - S'inscrire</h1>
       <nav>
         <a href="index.html" target="_blank">Accueil</a>
         <a href="register.html" target="_blank">S'inscrire</a>
@@ -35,7 +35,9 @@
               name="name"
               placeholder="3 caractères minimum"
             />
+            <img class="nameOk hidden" src="medias/check.svg" alt="champ ok">
             <img class="errName hidden" src="medias/error.png" alt="erreur" />
+
           </div>
           <hr />
           <p class="errNameP hidden">
@@ -54,6 +56,7 @@
               name="email"
               placeholder="Votre email"
             />
+            <img class="mailOk hidden" src="medias/check.svg" alt="champ ok">
             <img class="errMail hidden" src="medias/error.png" alt="erreur" />
           </div>
           <hr />
@@ -71,6 +74,7 @@
               name="mdp"
               placeholder="Votre mot de passe"
             />
+            <img class="mdpOk hidden" src="medias/check.svg" alt="champ ok">
             <img class="errMdp hidden" src="medias/error.png" alt="erreur" />
           </div>
           <hr />
@@ -95,6 +99,7 @@
               name="confmdp"
               placeholder="Confirmez le mot de passe"
             />
+            <img class="mdpConfOk hidden" src="medias/check.svg" alt="champ ok">
             <img
               class="errConfMdp hidden"
               src="medias/error.png"
