--- a/play.html
+++ b/play.html
@@ -9,7 +9,7 @@
 
   <body>
     <header>
-      <h1>ENI - MEMORY - Accueil</h1>
+      <h1>ENI - MEMORY - Jouer</h1>
       <nav>
         <a href="index.html" target="_blank">Accueil</a>
         <a href="register.html" target="_blank">S'inscrire</a>
@@ -24,9 +24,9 @@
         <h3>Choix du Memory</h3>
         <select name="theme" id="theme">
           <option value="Animaux" selected>Animaux</option>
-          <option value="Légumes">Légumes</option>
+          <!-- <option value="Légumes">Légumes</option>
           <option value="Animaux domestiques">Animaux domestiques</option>
-          <option value="Animaux animés">Animaux animés</option>
+          <option value="Animaux animés">Animaux animés</option> -->
         </select>
       </form>
 
@@ -42,46 +42,46 @@
 
         <div id="grille">
           <div class="case" value="1">
-            <img id="1" src="medias/image0.png" alt="" />
+            <img id="1" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="2">
-            <img id="2" src="medias/image0.png" alt="" />
+            <img id="2" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="3">
-            <img id="3" src="medias/image0.png" alt="" />
+            <img id="3" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="4">
-            <img id="4" src="medias/image0.png" alt="" />
+            <img id="4" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="5">
-            <img id="5" src="medias/image0.png" alt="" />
+            <img id="5" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="6">
-            <img id="6" src="medias/image0.png" alt="" />
+            <img id="6" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="7">
-            <img id="7" src="medias/image0.png" alt="" />
+            <img id="7" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="8">
-            <img id="8" src="medias/image0.png" alt="" />
+            <img id="8" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="9">
-            <img id="9" src="medias/image0.png" alt="" />
+            <img id="9" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="10">
-            <img id="10" src="medias/image0.png" alt="" />
+            <img id="10" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="11">
-            <img id="11" src="medias/image0.png" alt="" />
+            <img id="11" src="medias/image0.png" alt="dos carte" />
           </div>
           <div class="case" value="12">
-            <img id="12" src="medias/image0.png" alt="" />
+            <img id="12" src="medias/image0.png" alt="dos carte" />
           </div>
         </div>
       </div>
     </main>
 
-    <script src="js/functions.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/play.js"></script>
+    
   </body>
 </html>
